Fix a11y visibility issues

--- a/src/_includes/scss/_nav.scss
+++ b/src/_includes/scss/_nav.scss
@@ -15,11 +15,13 @@
     &--mobile {
       @include min-width($breakpoint-small) {
         display: none;
+        visibility: hidden;
       }
     }
     &--desktop {
       @include max-width($breakpoint-small) {
         display: none;
+        visibility: hidden;
       }
     }
 
